--- a/conf/application.conf
+++ b/conf/application.conf
@@ -342,12 +342,30 @@ db {
   # By convention, the default datasource is named `default`
 
   # https://www.playframework.com/documentation/latest/Developing-with-the-H2-Database
+  #
   #default.driver = org.h2.Driver
   #default.url = "jdbc:h2:mem:play"
   #default.username = sa
   #default.password = ""
 
+  # Default database configuration
+
+
+  #Adding Database
+  #slick.dbs.default.driver = "slick.driver.MySQLDriver$"
+  #slick.dbs.default.db.driver = "com.mysql.jdbc.Driver"
+  #slick.dbs.default.db.url = "jdbc:mysql://localhost/DB"
+  #slick.dbs.default.db.user = "root"
+  #slick.dbs.default.db.password = ""
+
   # You can turn on SQL logging for any datasource
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
   #default.logSql=true
 }
+
+slick.dbs.default.driver="slick.driver.H2Driver$"
+slick.dbs.default.db.driver="org.h2.Driver"
+slick.dbs.default.db.url="jdbc:h2:mem:play"
+slick.dbs.default.db.username="sa"
+slick.dbs.default.db.password=""
+applyEvolutions.default=true
